--- a/style.css
+++ b/style.css
@@ -1,43 +1,46 @@
-body {
-  margin: 0;
-  font-family: Arial;
-  background: #f5f5f5;
+body{
+font-family: Arial;
+margin:0;
+background:#f4f4f4;
 }
 
-.header {
-  background: black;
-  padding: 15px;
-  text-align: center;
+header{
+background:black;
+padding:10px;
+text-align:center;
 }
 
-.logo {
-  width: 200px;
+.logo{
+width:200px;
 }
 
-.hero {
-  text-align: center;
-  padding: 40px;
+.hero{
+text-align:center;
+padding:20px;
 }
 
-.hero h1 {
-  color: #ff4d8d;
+.login{
+padding:20px;
 }
 
-button {
-  padding: 12px 25px;
-  background: green;
-  color: white;
-  border: none;
-  font-size: 16px;
+input{
+display:block;
+margin:10px 0;
+padding:10px;
+width:90%;
 }
 
-.flowers {
-  padding: 20px;
+button{
+padding:10px;
+margin:5px;
+background:green;
+color:white;
+border:none;
 }
 
-.card {
-  background: white;
-  padding: 15px;
-  margin: 10px;
-  border-radius: 10px;
+.flower{
+background:white;
+padding:15px;
+margin:10px;
+border-radius:10px;
 }
