--- a/css/style.css
+++ b/css/style.css
@@ -1,52 +1,73 @@
 body{
 
 font-family: Arial;
+
 margin:0;
+
 background:#f5f5f5;
 
 }
 
-header{
+.header{
 
 background:black;
+
 padding:15px;
+
 text-align:center;
 
 }
 
 .logo{
 
-height:60px;
+height:50px;
 
 }
 
-.auth-box{
+.auth-container{
 
 background:white;
-width:90%;
-max-width:400px;
-margin:50px auto;
+
+margin:30px;
+
 padding:20px;
+
 border-radius:10px;
 
-}
-
-input, select{
-
-width:100%;
-padding:10px;
-margin-top:10px;
+box-shadow:0 0 10px rgba(0,0,0,0.1);
 
 }
 
-button{
+.input{
 
 width:100%;
+
 padding:12px;
-margin-top:10px;
-background:#ff4d6d;
-color:white;
-border:none;
+
+margin:10px 0;
+
 border-radius:5px;
+
+border:1px solid #ccc;
+
+}
+
+.btn{
+
+width:100%;
+
+padding:12px;
+
+margin:5px 0;
+
+background:#ff4081;
+
+color:white;
+
+border:none;
+
+border-radius:5px;
+
+font-size:16px;
 
 }
